# swift-send

./: CONTRACTS_DEPLOYMENT.md  README.md  index.html  tailwind.config.ts
.cargo/: config.toml
backend/: README.md  openapi.yaml  package-lock.json  package.json
backend/migrations/: 001_init.sql
backend/src/: app.ts  config.ts  container.ts  errors.ts  index.ts  logger.ts
backend/src/core/: eventBus.ts
backend/src/routes/: escrow.ts  health.ts  transfers.ts
backend/src/services/: contractService.ts  escrow.ts  escrowService.ts  ledger.ts  stellarAdapter.ts  transferService.ts
backend/src/types/: fastify.d.ts
backend/src/utils/: response.ts
contracts/: Cargo.toml  README.md
contracts/access-guard/: Cargo.toml
contracts/access-guard/src/: lib.rs
contracts/compliance-limits/: Cargo.toml
contracts/compliance-limits/src/: lib.rs
contracts/compliance-limits/tests/: test.rs
contracts/remittance-escrow/: Cargo.toml
contracts/simple-counter/: Cargo.toml  rust-toolchain.toml
contracts/wallet-registry/: Cargo.toml
src/: App.tsx  index.css  main.tsx
src/components/: AuthForm.tsx  BalanceCard.tsx  BottomNav.tsx  ComplianceCheck.tsx  ComplianceDashboard.tsx  ComplianceNotifications.tsx  ContactItem.tsx  ErrorBoundary.tsx  FeeBreakdown.tsx  StatusBadge.tsx  TransactionItem.tsx  VerificationFlow.tsx
src/contexts/: AuthContext.tsx  ComplianceContext.tsx
src/data/: mockData.ts
src/lib/: transfers.ts
src/pages/: ComplianceInfo.tsx  Dashboard.tsx  History.tsx  Login.tsx  Profile.tsx  SendMoney.tsx
src/types/: compliance.ts  index.ts
(+13 files in other folders)
